src/styles/index.css
/* ... */
.home_section_6 .fqa_container .fqa_div .question span {
    width: 90%;
}

.home_section_6 .fqa_container .fqa_div .question i {
    width: auto;
    margin-right: 10px;
    color: var(--accent-color);
}

.home_section_6 .fqa_container .fqa_div .answer {
    width: 100%;
    padding: 15px;
    background-image: linear-gradient(to right, var(--accent-color), var(--gradiant-help));
    font-size: 18px;
    color: var(--contrast-color);
    font-weight: 500;
    cursor: pointer;
    border-bottom-right-radius: 5px;
    border-bottom-left-radius: 5px;
    box-shadow: 0px 0px 1px var(--heading-color);
    transition: 0.5s ease-in;
}

@media (max-width: 1171px) {
    .home_section_2 .home_about_container .paregraph1 p {
        font-size: 16px;
    }
}

@media (max-width: 1000px) {
    .home_section_1 .hero_containet .text_div_container p:nth-child(1) {
        font-size: 25px;
    }

    .home_section_1 .hero_containet .text_div_container p:nth-child(2) {
        font-size: 16px;
    }

    .home_section_1 .hero_containet .hero_image img {
        width: 90%;
    }

    .home_section_2 .home_about_container {
        margin: 0px 0 50px 0;
    }

    .home_section_2 .home_about_container .home_about_div1 {
        flex-wrap: wrap;
        row-gap: 20px;
    }

    .home_section_2 .home_about_container .home_about_image {
        width: 100%;
        display: flex;
        justify-content: center;
    }

    .home_section_2 .home_about_container .home_about_image img {
        width: 90%;
    }

    .home_section_2 .home_about_container .paregraph1 {
        width: 100%;
    }

    .home_section_2 .home_about_container .paregraph1 p {
        font-size: 19px;
    }

    .home_section_2 .home_about_container .home_about_div2 {
        flex-direction: column-reverse;
        gap: 25px;
    }

    .home_section_2 .home_about_container .home_about_div2 .home_about_image2 {
        display: flex;
        align-items: center;
        justify-content: center;
        width: 100%;
        margin: 15px 0;
    }

    .home_section_2 .home_about_container .home_about_div2 .home_about_image2 img {
        width: 90%;
    }

    .home_section_2 .home_about_container .home_about_div2 .home_about_whay {
        width: 100%;
    }

    .home_section_2 .home_about_container .home_about_div2 .home_about_whay p {
        text-align: center;
    }

    .home_section_3 .how_work_container .staps_container {
        display: block;
        height: auto;
    }

    .home_section_3 .how_work_container .staps_container .steps {
        display: flex;
        justify-content: center;
        padding: 10px 0;
        text-align: center;
        margin: 80px 0;
    }

    .home_section_3 .how_work_container .staps_container .steps:nth-child(1)::before {
        top: -30px;
        left: 48%;
    }

    .home_section_3 .how_work_container .staps_container .steps:nth-child(2)::before {
        top: -30px;
        left: 48%;
    }

    .home_section_3 .how_work_container .staps_container .steps:nth-child(3)::before {
        top: -30px;
        left: 48%;
    }

    .home_section_3 .how_work_container .staps_container .steps i {
        font-size: 50px;
        padding: 5px 0;
        text-align: center;
    }

    .home_section_3 .how_work_container .staps_container .steps b {
        font-size: 20px;
        margin: 10px 0;
        white-space: nowrap;
        width: 100%;
    }

    .home_section_3 .how_work_container .staps_container .steps p {
        width: 100%;
    }


    .home_section_4 .home_blog_container .home_single_blog_container {
        display: block;
    }

    .home_section_4 .home_blog_container .home_single_blog_container .home_single_blog {
        width: auto;
    }

    .home_section_4 .home_blog_container .home_single_blog_container .home_single_blog .blog_title {
        font-size: 21px;
    }

    .home_section_6 .fqa_container .fqa_div .faq_item {
        width: 90%;
    }

}

@media (max-width: 788px) {
    .home_section_1 .hero_containet .text_div_container {
        width: 100%;
        flex-wrap: wrap;
    }

    .home_section_1 .hero_containet {
        flex-direction: column-reverse;
        text-align: center;
    }

    .home_section_1 .hero_containet .text_div_container img {
        display: none;
    }

    .home_section_1 .hero_containet .hero_image {
        width: 100%;
        display: grid;
        place-items: center;
    }

    .home_section_1 .hero_containet .hero_image img {
        width: 50%;
    }

    .home_section_3 .how_work_container .staps_container .steps:nth-child(1)::before {
        left: 47%;
    }

    .home_section_3 .how_work_container .staps_container .steps:nth-child(2)::before {
        left: 47%;
    }

    .home_section_3 .how_work_container .staps_container .steps:nth-child(3)::before {
        left: 47%;
    }

    .home_section_5 .contact_us_container .conact_div {
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
    }

    .home_section_5 .contact_us_container .conact_div .contact_form {
        width: 90%;
    }

    .home_section_5 .contact_us_container .map_div {
        width: 100%;
    }

    .home_section_5 .contact_us_container .map_div iframe {
        width: 100%;
        height: 40dvh;
    }

}

@media (max-width: 656px) {
    .home_page_main .home_section_1 .text_div p {
        width: 95%;
        font-size: 30px;
    }
}
/* ... */

